--- a/devices/common/.config
+++ b/devices/common/.config
@@ -77,6 +77,8 @@ CONFIG_BUSYBOX_CONFIG_FEATURE_XARGS_SUPPORT_REPL_STR=y
 CONFIG_BUSYBOX_CONFIG_FEATURE_CROND_SPECIAL_TIMES=y
 CONFIG_BUSYBOX_CONFIG_FEATURE_SYSLOG_INFO=y
 
+CONFIG_PACKAGE_luci-ssl=y # uhttpd服务
+
 CONFIG_PACKAGE_bash=y
 CONFIG_PACKAGE_ca-bundle=y
 
